# reminder-bot

./: .gitmodules  CMakeLists.txt
src/: main.cpp
